# crystal-normal-form

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  perf_test.sh  pyproject.toml  run_waterfill_debug.sh
astar/: astar.ipynb  index.html
cnf_overview/: cnf_overview.ipynb  index.html
docs/: astar.ipynb  index.md  lattice_normal_form.ipynb  motif_normal_form.ipynb  neighbor_finding.ipynb  quickstart.ipynb  ratchet.ipynb  sample.ipynb  search.ipynb  waterfilling.ipynb
experiments/neighbor_stats/: disc_param_sweep.py  new_nb_rate_vs_num_atoms.py  num_nbs_by_num_atoms.py  pdd_by_xi_delta.py  pdd_by_xi_delta_relax.py  visualize.ipynb
experiments/neighbor_stats/data/: disc_param_sweep.json  nb_ct_vs_sites.json  pdd_by_xi_delta.json  rings.json
experiments/neighbor_stats/utils/: __init__.py
lattice_normal_form/: index.html
motif_normal_form/: index.html
neighbor_finding/: index.html
quickstart/: index.html
ratchet/: index.html
sample/: index.html  sample.ipynb
scripts/: analyze_neighbor_counts.py  ceiling_search.py  check_search_completion.py  compute_permutation_data.py  db_status.py  db_status_partitioned.py  generate_unimodular_matrices.py  line_profile_cnf.py  migrate_inbox_add_id.py  migrate_metastore_add_stats.py  pathfind.py  pathfind_astar.py  pathfind_flood.py  pathfind_waterfill.py  profile_neighbors_specific_structs.py  profile_rust_v_python.py  refine_barrier.py  setup_search_db.py  summarize_matrix_data.py  visualize.py
search/: index.html  search.ipynb  search_index.json
src/cnf/: __init__.py  cnf_constructor.py  crystal_normal_form.py  lattice_normal_form.py  unimodular.py  unit_cell.py
src/cnf/basis_normal_form/: basis_normal_form.py  element_position_map.py
src/cnf/calculation/: __init__.py  (+4 more)
src/cnf/rust_cnf/: Cargo.toml
src/cnf/rust_cnf/src/: bidirectional.rs  bindings.rs  geometry.rs  heuristics.rs  lib.rs  linalg.rs  lnf.rs  mnf.rs  neighbors.rs  pathfinding.rs  permutations.rs  selling.rs  stabilizers.rs
tests/: Sb.cif  conftest.py  test_crystal_normal_form.py  test_superbasis.py  test_thesis_cases.py  test_unit_cell.py
tests/basis_normal_form/: conftest.py  test_basis_normal_form.py  test_element_position_map.py  test_motif.py  test_utils.py
tests/helpers/: __init__.py  assertions.py  data.py
tests/integration/: test_astar_phases.py  test_basis_neighbor_reciprocity.py  test_basis_neighbors_distinct.py  test_can_get_path.py  test_can_put_structs_in_cnf.py  test_careful_lattice_neighbor_reciprocity.py  test_cataloged_unimodular_matrices.py  test_cnf_redundancy.py  test_cnf_round_trip_preserves_crystal.py  test_continue_search.py  test_david_mats.py  test_discretization_maps_vonorms_to_same_set.py  test_distinct_neighbors.py  test_fast_stabilizers_works.py  test_grouped_vonorms.py  test_inversion.py  test_kurlin_bases.py  test_lat_neighbor_reciprocity.py  test_lattice_neighbors_distinct.py  test_neighbors_are_nearby.py  test_neighbors_are_unique.py  test_partitioned_flood_fill.py  test_pathfinding_integrity.py  test_patho_neighbors.py  test_reapplying_cnf_doesnt_change_cnf.py  test_repeated_cnf_application.py  test_rust_python_equal.py  test_sandbox.py  test_selling_reduction_preserves_crystals.py  test_selling_reduction_yields_same_vonorms.py  test_stabilizers.py  test_stabilizers_vs_transforms.py  test_supercells_preserve_crystal.py  test_thesis_neighbor_example.py  test_unique_cnf_patho_cases.py
tests/lattice/: test_atomic_motif.py  test_atomic_position_transform.py  test_conorms.py  test_lattice_normal_form.py  test_permutations.py  test_rounding.py  test_selling_reduce.py  test_selling_unimodular.py  test_sorting.py  test_superbasis.py  test_unimodular.py  test_vonorm_list.py  test_vonorm_stabilizers.py  test_vonorm_unimodular.py
tests/lattice_normal_form/: test_lattice_normal_form.py  test_rounding.py  test_selling.py  test_sorting.py  test_unimodular.py
tests/linalg/: test_matrix_tuple.py  test_unimodular.py
tests/navigation/: test_distinct_neighbors.py  test_lat_neighbor_reciprocity.py  test_lattice_neighbors.py
tests/regression/: test_basic_regression.py
tests/sublattice/: conftest.py  test_cyclic_group.py  test_fraction.py  test_generation.py  test_primes.py  test_sublattice_generating_set.py  test_sublattice_utils.py  test_upper_triangular.py  test_vector.py
tests/unit/: conftest.py  test_crystal_normal_form.py  test_thesis_cases.py  test_unit_cell.py
waterfilling/: index.html
(+984 files in other folders)
