[project]
name = "cnf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Max Gallant", email = "mcgallant72@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "jupyterlab>=4.4.7",
    "mp-api>=0.45.8",
    "numpy>=2.3.2",
    "pymatgen>=2025.6.14",
]

[project.scripts]
cnf = "cnf:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "average-minimum-distance>=1.6.0",
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
minversion = "6.0"
norecursedirs = ["tests/helpers"]