[project]
name = "cnf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Max Gallant", email = "mcgallant72@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "ase>=3.26.0",
    "average-minimum-distance>=1.6.0",
    "line-profiler>=5.0.0",
    "mp-api>=0.45.8",
    "numpy<2",
    "pymatgen>=2025.6.14",
    "pytest-xdist>=3.8.0",
    "rustworkx>=0.17.1",
    "sortedcontainers>=2.4.0",
    "tensorflow>=2.14.0,<2.16",
    "tensorpotential>=0.4.5",
]

[project.optional-dependencies]
jobs = ["jobflow>=0.1.18"]

[project.scripts]
cnf = "cnf.cli:main"

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
# Path to the Rust crate
manifest-path = "src/cnf/rust_cnf/Cargo.toml"
# Where Python source code lives
python-source = "src"
# The resulting module will be importable as cnf.rust_cnf
module-name = "cnf.rust_cnf"
# Include Python packages not just the Rust extension
python-packages = ["cnf"]
# Features to enable (if any)
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "average-minimum-distance>=1.6.0",
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
minversion = "6.0"
norecursedirs = ["tests/helpers"]
addopts = "--disable-warnings"
markers = [
    "debug: Marks a test as a \"debug\" test. Skipped by default.",
]
